# unsloth-vqa

./: (260324)_baseline_colab.ipynb  .gitignore  AGENTS.md  DAY13_효율적인_Fine_tuning_PEFT_sol.ipynb  image_eda.ipynb  image_eda.py  jinseok.ipynb  jinseok.py  project_intro_ko.txt  pyproject.toml  train_unsloth_qwen35_9b_colab.py
eda_outputs/: answer_label_normalization_candidates.csv  answer_label_normalization_merge_groups.csv  answer_label_normalization_summary.csv  answer_letter_by_question_type.csv  answer_letter_distribution.csv  choice_concept_stats.csv  eda_summary.txt  image_meta_sample.csv  normalized_target_class_distribution.csv  question_type_summary.csv  question_type_top_answers.csv  resize_distortion_simulation.csv  target_class_by_question_type.csv  target_class_distribution.csv  test_image_meta.csv  top_image_sizes.csv  top_target_classes.csv  train_valid_image_meta.csv  valid_image_meta_sample.csv
